test(roundtrip): add jqwik property test; fix binary ordering and nested text-merge round-trip bugs
A property-based fixpoint test (write->read->write must be byte-identical)
over randomly generated DTO trees surfaced two round-trip stability bugs:

1. Binary order was non-deterministic: FictionBookDto's constructor used
   Map.copyOf(resources), whose iteration order is salt/hash-randomized, so
   a book with several <binary> elements reordered them on every rewrite.
   Fixed by preserving document order (unmodifiable LinkedHashMap); Fb2Reader
   now just hands its document-order LinkedHashMap to the constructor.

2. Text escaping drifted: TextNodeMerger only merged adjacent Text nodes at
   the paragraph's top level, not inside nested inlines (Strong/Emphasis/Link/
   Sub/Sup/Strikethrough). Split text survived to the writer, and Woodstox
   escapes '>' differently depending on writeCharacters boundaries (a&gt; vs
   a>), so the form only stabilized after one round-trip. Fixed by merging
   recursively inside container inlines.

Add Fb2RoundTripPropertyTest (300 tries) generating sections, nesting,
inline formatting, links and binaries.